--- a/MIT.ipynb
+++ b/MIT.ipynb
@@ -6,14 +6,19 @@
    "source": [
     "# The Massachusetts Institute of Technology (MIT)\n",
     "\n",
-    "**Add your full name and GitHub username here**\n",
+    "**jonathan falcey SingleSourceOfTruth**\n",
     "\n",
-    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Minnesota. Established in 1422, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
+    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Massachusetts. Established in 1861, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
     "\n",
     "The original MIT logo was created by Seymour Papert and it represents two figures symbolizing the fields of Science and Art. The image below displays the original logo.\n",
     "\n",
-    "![](image.png)"
+    "![title](https://news.mit.edu/sites/default/files/styles/news_article__image_gallery/public/images/202103/MIT-seal-948x632_0.jpg?itok=h4_7ZLf8)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -39,7 +44,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
